tree-sitter-klog/test/corpus/entries.txt
================================================================================
Durations
================================================================================

2020-01-01
    1h
    5m
    4h12m
    +3m
    -8h30m
    0h
    119m

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration))
    (entry
      (duration))
    (entry
      (duration))
    (entry
      (duration))
    (entry
      (duration))
    (entry
      (duration))
    (entry
      (duration))))

================================================================================
Ranges
================================================================================

2020-01-01
    8:00 - 9:00
    11:00-14:15
    8:00am - 2:00pm
    23:00 - 24:00

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (range
        (time)
        (time)))
    (entry
      (range
        (time)
        (time)))
    (entry
      (range
        (time)
        (time)))
    (entry
      (range
        (time)
        (time)))))

================================================================================
Shifted times
================================================================================

2020-01-01
    <23:40 - 3:12
    0:30> - 4:00>
    <23:00-1:00>

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (range
        (time)
        (time)))
    (entry
      (range
        (time)
        (time)))
    (entry
      (range
        (time)
        (time)))))

================================================================================
Open ranges
================================================================================

2020-01-01
    05:17 - ?
    4:00pm-???
    <23:00 - ??

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (open_range
        (time)
        (placeholder)))
    (entry
      (open_range
        (time)
        (placeholder)))
    (entry
      (open_range
        (time)
        (placeholder)))))
