tree-sitter-klog/test/corpus/indentation.txt
================================================================================
Four spaces
================================================================================

2020-01-01
    1h First
        continued
    2h Second

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)
      (entry_summary))
    (entry
      (duration)
      (entry_summary))))

================================================================================
Three spaces
================================================================================

2020-01-01
   1h First
      continued
   2h Second

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)
      (entry_summary))
    (entry
      (duration)
      (entry_summary))))

================================================================================
Two spaces
================================================================================

2020-01-01
  1h First
    continued
  2h Second

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)
      (entry_summary))
    (entry
      (duration)
      (entry_summary))))

================================================================================
Tabs
================================================================================

2020-01-01
	1h First
		continued
	2h Second

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)
      (entry_summary))
    (entry
      (duration)
      (entry_summary))))

================================================================================
Indentation style is per record
================================================================================

2020-01-01
  1h Two spaces, so four spaces are a continuation
    2h is part of the summary

2020-01-02
    1h Four spaces, so four spaces are an entry
    2h is an entry

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)
      (entry_summary)))
  (record
    (date)
    (entry
      (duration)
      (entry_summary))
    (entry
      (duration)
      (entry_summary))))
