tree-sitter-klog/test/corpus/records.txt
================================================================================
Date only
================================================================================

2020-01-01

--------------------------------------------------------------------------------

(source_file
  (record
    (date)))

================================================================================
Date with slashes
================================================================================

2020/01/01

--------------------------------------------------------------------------------

(source_file
  (record
    (date)))

================================================================================
Should-total
================================================================================

2020-01-01 (8h!)

2020-01-02 (5h15m!)

2020-01-03 (-3h30m!)

2020-01-04 ( 30m! )

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (should_total
      (duration)))
  (record
    (date)
    (should_total
      (duration)))
  (record
    (date)
    (should_total
      (duration)))
  (record
    (date)
    (should_total
      (duration))))

================================================================================
Record summary
================================================================================

2020-01-01
A record summary can span
multiple lines.
    1h

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (record_summary)
    (entry
      (duration))))

================================================================================
Date-like record summary line
================================================================================

2020-01-01
2020-01-02 is only a summary line, as there is no blank line
    1h

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (record_summary)
    (entry
      (duration))))

================================================================================
Multiple records
================================================================================


2020-01-01
    1h


2020-01-02
    2h
    
2020-01-03
Summary

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)))
  (record
    (date)
    (entry
      (duration)))
  (record
    (date)
    (record_summary)))

================================================================================
Record directly after entries
================================================================================

2020-01-01
    1h
2020-01-02
    2h

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (entry
      (duration)))
  (record
    (date)
    (entry
      (duration))))

================================================================================
Trailing whitespace
================================================================================

2020-01-01 (8h!)   
Summary   
    1h   
    2h #tag   

--------------------------------------------------------------------------------

(source_file
  (record
    (date)
    (should_total
      (duration))
    (record_summary)
    (entry
      (duration))
    (entry
      (duration)
      (entry_summary
        (tag
          (tag_name))))))
